@@ -1,3 +1,8 @@
+2002-10-01  Dom Lachowicz <doml@appligent.com>
+
+	* TODO: update
+	* rsvg.c (): lay some framework for stroke-dash parameters
+	
 2002-10-01  jacob berkman  <jacob@ximian.com>
 
 	* rsvg-css.c (rsvg_css_parse_normalized_length): fix to build with
